--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,19 @@
 version: '3'
 services:
   web:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile.dev
-    ports: 
+    ports:
       - "3000:3000"
     volumes:
       - "/usr/app/node_modules"
       - "/home/rmundy/real-project/frontend:/usr/app"
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - "/usr/app/node_modules"
+      - "/home/rmundy/real-project/frontend:/usr/app"
+    command: ["npm", "run", "test"]
