--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,17 +3,6 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000"
-    volumes:
-      - "/usr/app/node_modules"
-      - "/home/rmundy/real-project/frontend:/usr/app"
-  tests:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - "/usr/app/node_modules"
-      - "/home/rmundy/real-project/frontend:/usr/app"
-    command: ["npm", "run", "test"]
+      - '80:80'
